force-app/main/default/objects/Opportunity/fields/Signatory__c.field-meta.xml
<CustomField>
    <fullName>Signatory__c</fullName>
    <description>Listing of common (04-1-2021) signatories</description>
    <inlineHelpText>Choose a signatory for the contract</inlineHelpText>
    <label>Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jeremy Singer</fullName>
            </value>
            <value>
                <fullName>David C. Meade Jr.</fullName>
            </value>
            <value>
                <fullName>Tarlin Ray</fullName>
            </value>
            <value>
                <fullName>Doug Waugh</fullName>
            </value>
            <value>
                <fullName>Aaron Lemmon-Strauss</fullName>
            </value>
            <value>
                <fullName>Dr. Eldon Tyrell</fullName>
                <isActive>false</isActive>
                <label>Dr. Eldon Tyrell</label>
            </value>
            <value>
                <fullName>Hannibal Chew</fullName>
                <isActive>false</isActive>
                <label>Hannibal Chew</label>
            </value>
            <value>
                <fullName>J.F. Sebastian</fullName>
                <isActive>false</isActive>
                <label>J.F. Sebastian</label>
            </value>
            <value>
                <fullName>Leon Kowalski</fullName>
                <isActive>false</isActive>
                <label>Leon Kowalski</label>
            </value>
            <value>
                <fullName>Niander Wallace</fullName>
                <isActive>false</isActive>
                <label>Niander Wallace</label>
            </value>
            <value>
                <fullName>Rick Deckard</fullName>
                <isActive>false</isActive>
                <label>Rick Deckard</label>
            </value>
            <value>
                <fullName>Sapper Morton</fullName>
                <isActive>false</isActive>
                <label>Sapper Morton</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>