force-app/main/default/objects/Opportunity/fields/Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Title__c</fullName>
    <description>Field stores the title for the signatory.
Want to changed this to a synced picklist with signatory</description>
    <label>Signatory Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>